<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/plantPalGreen"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/newPlantButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/paytone_one"
        android:text="@string/newPlant"
        app:cornerRadius="20pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/resumePlantButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/paytone_one"
        android:text="@string/resumePlant"
        app:cornerRadius="20pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPlantButton"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/plantpalsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/paytone_one"
        android:text="@string/PlantPalsTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/plantPalGreen"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plantpalsTitle"
        app:srcCompat="@drawable/plant"
        tools:ignore="ImageContrastCheck" />

    <View
        android:id="@+id/helpOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/plantTransparent"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/instructionText"
        android:layout_width="0dp"
        android:layout_height="494dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/paytone_one"
        android:gravity="center"
        android:text="@string/helpInstructions"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="8sp"
        android:visibility="invisible"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/helpFAB"
        app:layout_constraintEnd_toEndOf="@+id/helpOverlay"
        app:layout_constraintStart_toStartOf="@+id/helpOverlay"
        app:layout_constraintTop_toBottomOf="@+id/plantpalsTitle" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/helpFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:onClick="showOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>