<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".selectNewPlant">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/choosePlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:fontFamily="@font/paytone_one"
            android:text="@string/choosePlant"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/primaryDarkColor"
            app:autoSizeMinTextSize="8dp" />

        <LinearLayout
            android:id="@+id/seedLinear"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/seedOptionHeight"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/tulipSeed"
                style="@android:style/Widget.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@color/white"
                android:onClick="displayTulipOption"
                android:scaleType="centerInside"
                android:tintMode="src_in"
                app:srcCompat="@drawable/tulip_seed"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,ImageContrastCheck" />

            <ImageButton
                android:id="@+id/treeSeed"
                style="@android:style/Widget.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@color/cardview_light_background"
                android:onClick="displayTreeOption"
                android:scaleType="centerInside"
                android:tintMode="src_in"
                app:srcCompat="@drawable/tree_seed"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/garlicSeed"
                style="@android:style/Widget.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@color/white"
                android:onClick="displayGarlicOption"
                android:scaleType="centerInside"
                android:tintMode="src_in"
                app:srcCompat="@drawable/garlic_seed"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/divider"
            tools:visibility="invisible" />

        <LinearLayout
            android:id="@+id/plantLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center|center_horizontal"
            android:orientation="vertical"
            android:visibility="invisible"
            android:weightSum="0"
            tools:visibility="invisible">

            <TextView
                android:id="@+id/seedSelectionText"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/paytone_one"
                android:lines="1"
                android:minLines="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/plantPalGreen"
                app:autoSizeMinTextSize="6dp"
                app:autoSizeTextType="uniform" />

            <ImageView
                android:id="@+id/seedSelecttionImage"
                android:layout_width="@dimen/imageWidth"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:srcCompat="@drawable/appletree"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/optionalName"
                android:layout_width="286dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/paytone_one"
                android:hint="@string/optionalNameHint"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/plantName" />

            <Button
                android:id="@+id/selectButton"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/paytone_one"
                android:text="@string/select"
                app:cornerRadius="20pt" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>